@@ -14,6 +14,7 @@
 -Use throbber from Firefox for busy indication
 -Add toolbar for channel list
 -Fixed bug where metadata panel wouldn't update
+-Make metadata panel more human readable
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
